test/Fail/Issue1963I380.err
Issue1963I380.agda:13.16-21: error: [UnequalTypes]
The type
  Σ _A_35 _B_36
is not a subtype of
  z .proj₁ ≡ y .proj₁ → _proj₂_32 (y = y) (z = z) ≡ z .proj₂
when checking that the inferred type of an application
  Σ _A_35 _B_36
matches the expected type
  z .proj₁ ≡ y .proj₁ → _proj₂_32 (y = y) (z = z) ≡ z .proj₂
